Clean & docu classes